--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,7 @@
 name: Fridges
 main: com.servegame.n1p.Fridges.Fridges
-version: 1.00
+version: 1.0
 commands:
   fridges:
     description: Enable or Disable Fridges
-    usage: |
-            /<command>
+    usage: /fridges
